Fix screen jump on load

--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -23,6 +23,7 @@ body {
 	display: flex;
 	place-items: center;
 	place-content: center;
-	min-height: 100vh;
+	height: 100vh;
 	background: $primary-color;
+	overflow-y: hidden;
 }
